# QC-Gateway

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  configure_nginx.sh  docker-compose.yaml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_middleware.sh
config/fail2ban/: jail.local
config/nginx/site-confs/: api.linksfoundation.com.conf.template  dashboard.linksfoundation.com.conf.template  default.conf  docs.linksfoundation.com.conf.template  grafana.linksfoundation.com.conf.template  jobs.linksfoundation.com.conf.template  prometheus.linksfoundation.com.conf.template  rng.linksfoundation.com.conf.template  spark.linksfoundation.com.conf.template  status.linksfoundation.com.conf.template  store.linksfoundation.com.conf.template
config/php/: www2.conf
docs/: DOCUMENTATION.md  MODULARIZATION.md
middleware/: __init__.py  artifacts.py  authentication.py  authorization.py  concurrency.py  config.py  db.py  job_capture.py  job_counters.py  job_reporter.py  main.py  minio.py  reporting.py  utils.py
middleware/plugins/: __init__.py  datatypes.py  interfaces.py  loader.py
middleware/sites/: __init__.py
middleware/sites/spark/: __init__.py  authorization.py  config.py  plugin.py  reporting.py
middleware/vendors/: __init__.py
middleware/vendors/iqm/: __init__.py  calibration.py  config.py  headers.py  job_status.py  plugin.py  request_parser.py  response_parser.py
middleware/vendors/iqm/jobs-portal/: index.html
minio-init/: bootstrap.sh
